Archive2/07/9f88002a95d2e1/output
main.cpp:16:77: error: expected ';' at end of member declaration
     const  CallbackPack<ThisT, ThisT> callbackPack123 = CallbackPack<ThisT, ThisT>((*this));
                                                                             ^
main.cpp:16:77: error: 'const S::CallbackPack<S, S> S::ThisT' conflicts with a previous declaration
main.cpp:6:15: note: previous declaration 'typedef struct S S::ThisT'
     typedef S ThisT;
               ^
main.cpp:16:82: error: expected unqualified-id before '>' token
     const  CallbackPack<ThisT, ThisT> callbackPack123 = CallbackPack<ThisT, ThisT>((*this));
                                                                                  ^
main.cpp:16:70: error: wrong number of template arguments (1, should be 2)
     const  CallbackPack<ThisT, ThisT> callbackPack123 = CallbackPack<ThisT, ThisT>((*this));
                                                                      ^
main.cpp:9:12: error: provided for 'template<class IdsT, class DataT> struct S::CallbackPack'
     struct CallbackPack{
            ^
